infrastructure/kubernetes/app/vault-manifests/httproute.yml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
    name: vault
    namespace: vault
spec:
    parentRefs:
        - name: traefik
          namespace: default
          group: gateway.networking.k8s.io
          kind: Gateway
          sectionName: https
    hostnames:
        - vault.lan
    rules:
        - matches:
              - path:
                    type: PathPrefix
                    value: /
          backendRefs:
              - name: vault-ui
                port: 8200
                group: ""
                kind: Service
                weight: 1
